--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
       --bg: #f3f4f6;
       --fg: #111827;
       --panel: #ffffff;
+      --panel2: #f9fafb;
       --muted: #6b7280;
       --label: #4b5563;
       --code-bg: #f9fafb;
+      --border: rgba(10,20,40,.12);
+      --radius: 14px;
+      --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      --sans: "Noto Sans", Arial, sans-serif;
 
       --btn-bg: #111827;
       --btn-fg: #f9fafb;
@@ -41,7 +46,7 @@
       --chip-fg: #111827;
       --chip-border: #e5e7eb;
 
-      --shadow: 0 4px 20px rgba(15, 23, 42, 0.15);
+      --shadow: 0 10px 30px rgba(15, 23, 42, 0.12);
     }
 
     html[data-theme="dark"] {
@@ -51,6 +56,8 @@
       --muted: #94a3b8;
       --label: #cbd5e1;
       --code-bg: #111827;
+      --panel2: #101b27;
+      --border: rgba(255,255,255,.10);
 
       --btn-bg: #e5e7eb;
       --btn-fg: #0b1220;
@@ -70,37 +77,88 @@
 
     body {
       margin: 0;
-      padding: 20px;
-      font-family: "Noto Sans", Arial, sans-serif;
-      background: var(--bg);
+      font-family: var(--sans);
+      background:
+        radial-gradient(1200px 800px at 15% 10%, rgba(106,166,255,.10), transparent 60%),
+        radial-gradient(900px 650px at 90% 25%, rgba(126,231,135,.10), transparent 55%),
+        var(--bg);
       color: var(--fg);
-      display: flex;
-      justify-content: center;
-    }
-
-    main {
-      max-width: 980px;
-      width: 100%;
-      background: var(--panel);
-      padding: 20px 24px;
-      border-radius: 12px;
-      box-shadow: var(--shadow);
     }
 
     header {
-      display: flex;
-      align-items: baseline;
-      justify-content: space-between;
-      gap: 14px;
-      margin-bottom: 16px;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+      background: color-mix(in oklab, var(--bg) 80%, transparent);
+      border-bottom: 1px solid var(--border);
     }
 
-    h1 {
+    .wrap {
+      max-width: 1100px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 18px;
+    }
+
+    .topbar {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .title {
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+    }
+
+    .title h1 {
+      font-size: 18px;
       margin: 0;
-      font-size: 1.85rem;
-      font-weight: 850;
-      letter-spacing: -0.01em;
+      letter-spacing: .2px;
+    }
+
+    .title .sub {
+      font-size: 13px;
+      color: var(--muted);
+      font-family: var(--mono);
+    }
+
+    .actions {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .btn {
+      appearance: none;
+      border: 1px solid var(--border);
+      background: linear-gradient(180deg, color-mix(in oklab, var(--panel) 92%, white 8%), var(--panel));
       color: var(--fg);
+      padding: 10px 12px;
+      border-radius: 12px;
+      cursor: pointer;
+      box-shadow: var(--shadow);
+      font-size: 13px;
+      text-decoration: none;
+      transition: transform .06s ease, border-color .15s ease;
+    }
+    .btn:active { transform: translateY(1px); }
+    .btn.ghost { background: transparent; box-shadow: none; }
+
+    main .wrap { padding-top: 16px; padding-bottom: 24px; }
+
+    .card {
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, var(--panel), var(--panel2));
+      box-shadow: var(--shadow);
+      padding: 18px;
+      overflow: hidden;
     }
 
     .layout {
@@ -111,8 +169,7 @@
     }
 
     @media (max-width: 900px) {
-      body { padding: 16px; }
-      main { padding: 16px; }
+      .wrap { padding: 16px; }
       .layout { grid-template-columns: 1fr; }
     }
 
@@ -134,21 +191,21 @@
       display: block;
       padding: 12px 14px;
       border-radius: 999px;
-      border: 1px solid var(--chip-border);
-      background: var(--chip-bg);
+      border: 1px solid var(--border);
+      background: color-mix(in oklab, var(--panel) 92%, black 8%);
       text-decoration: none;
-      color: var(--chip-fg);
+      color: var(--fg);
       font-weight: 700;
       transition: background-color 0.12s ease, border-color 0.12s ease,
         box-shadow 0.12s ease, transform 0.04s ease;
     }
 
     nav a:hover {
-      background: rgba(0, 0, 0, 0.05);
+      background: color-mix(in oklab, var(--panel) 88%, black 12%);
     }
 
     html[data-theme="dark"] nav a:hover {
-      background: rgba(255, 255, 255, 0.06);
+      background: color-mix(in oklab, var(--panel) 88%, black 12%);
     }
 
     nav a:active {
@@ -164,9 +221,9 @@
       background: var(--code-bg);
       color: var(--fg);
       border-radius: 12px;
-      border: 1px solid var(--chip-border);
+      border: 1px solid var(--border);
       padding: 16px 16px;
-      height: calc(100vh - 20px - 20px - 20px - 24px);
+      height: calc(100vh - 140px);
       max-height: 640px;
       overflow: auto;
       box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.12);
@@ -229,14 +286,26 @@
 </head>
 
 <body>
-  <main>
-    <header>
-      <div>
-        <h1 data-i18n="title">BrailleStudio</h1>
+  <header>
+    <div class="wrap">
+      <div class="topbar">
+        <div class="title">
+          <h1 data-i18n="title">BrailleStudio</h1>
+          <div class="sub">Home · Reader + practice hub</div>
+        </div>
+        <div class="actions">
+          <button class="btn ghost" id="themeBtn" type="button">Toggle theme</button>
+          <a class="btn" href="./pages/settings.html">Settings</a>
+          <a class="btn" href="./tools/braillebridge-com.html">COM tool</a>
+        </div>
       </div>
-    </header>
+    </div>
+  </header>
 
-    <div class="layout">
+  <main>
+    <div class="wrap">
+      <div class="card">
+        <div class="layout">
       <nav aria-label="" data-i18n-aria="mainNav">
         <ul>
           <li><a href="./pages/activity-runner.html" data-i18n="nav.practice"></a></li>
@@ -250,6 +319,8 @@
       <section>
         <div id="readme-box" data-i18n="loading">Laden…</div>
       </section>
+        </div>
+      </div>
     </div>
   </main>
 
@@ -312,6 +383,7 @@
 
     function applyTheme(theme) {
       document.documentElement.setAttribute("data-theme", theme);
+      localStorage.setItem(THEME_KEY, theme);
     }
 
     function getInitialTheme() {
@@ -324,6 +396,13 @@
     }
 
     applyTheme(getInitialTheme());
+    const themeBtn = document.getElementById("themeBtn");
+    if (themeBtn) {
+      themeBtn.addEventListener("click", () => {
+        const cur = document.documentElement.getAttribute("data-theme");
+        applyTheme(cur === "dark" ? "light" : "dark");
+      });
+    }
 
     const lang = getLangFromSettings();
     const T = I18N[lang] || I18N.nl;
